BankDevice mapper, service, repository - refactoring